--- a/color.ini
+++ b/color.ini
@@ -60,3 +60,21 @@ main_bg                               = 000
 sidebar_and_player_bg                 = 000
 scrollbar_fg_and_selected_row_bg      = 313235
 miscellaneous_bg                      = 313235
+
+[Adapta]
+main_fg                               = 00bcd4
+secondary_fg                          = BDC1C6
+main_bg                               = 13191c
+sidebar_and_player_bg                 = 13191c
+cover_overlay_and_shadow              = 202020
+indicator_fg_and_button_bg            = 313235
+pressing_fg                           = 1a73e8
+slider_bg                             = 222d32
+sidebar_indicator_and_hover_button_bg = 1a73e8
+scrollbar_fg_and_selected_row_bg      = 313235
+pressing_button_fg                    = FFF
+pressing_button_bg                    = FFF
+selected_button                       = 4285f4
+miscellaneous_bg                      = 1d1f21
+miscellaneous_hover_bg                = 383145
+preserve_1                            = FFF
