--- a/color.ini
+++ b/color.ini
@@ -67,11 +67,11 @@ secondary_fg                          = BDC1C6
 main_bg                               = 13191c
 sidebar_and_player_bg                 = 13191c
 cover_overlay_and_shadow              = 202020
-indicator_fg_and_button_bg            = 313235
+indicator_fg_and_button_bg            = 222d32
 pressing_fg                           = 1a73e8
 slider_bg                             = 222d32
-sidebar_indicator_and_hover_button_bg = 1a73e8
-scrollbar_fg_and_selected_row_bg      = 313235
+sidebar_indicator_and_hover_button_bg = 1591a4
+scrollbar_fg_and_selected_row_bg      = 222d32
 pressing_button_fg                    = FFF
 pressing_button_bg                    = FFF
 selected_button                       = 4285f4
