--- a/color.ini
+++ b/color.ini
@@ -78,3 +78,21 @@ selected_button                       = 4285f4
 miscellaneous_bg                      = 1d1f21
 miscellaneous_hover_bg                = 383145
 preserve_1                            = FFF
+
+[Plata]
+main_fg                               = 00bcd4
+secondary_fg                          = BDC1C6
+main_bg                               = 080808
+sidebar_and_player_bg                 = 080808
+cover_overlay_and_shadow              = 202020
+indicator_fg_and_button_bg            = 1d1d1d
+pressing_fg                           = 1a73e8
+slider_bg                             = 1d1d1d
+sidebar_indicator_and_hover_button_bg = 1591a4
+scrollbar_fg_and_selected_row_bg      = 1d1d1d
+pressing_button_fg                    = FFF
+pressing_button_bg                    = FFF
+selected_button                       = 4285f4
+miscellaneous_bg                      = 1d1f21
+miscellaneous_hover_bg                = 383145
+preserve_1                            = FFF
